test/cases/pos/0111_function_not_hoisted.ul

fn sum int a, int b => return a + b;
int x = sum(2, 3);
