test/cases/neg/0225_declared_wrong.ul
int sum = 0;

int y = sum(0, 3);
